<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorgreen"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="10dp">
        <com.example.star.view.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="60px"
            android:src="@drawable/login_logo_netease_prs"/>
        <EditText
            android:id="@+id/editPhone"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/editsharp"
            android:hint="@string/register_phone"
            android:paddingLeft="10dp"
            android:textSize="@dimen/big_small"
            android:textColor="@color/colorgreen"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp">
            <EditText
                android:id="@+id/editCode"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_weight="1"
                android:layout_marginRight="20dp"
                android:background="@drawable/editsharp"
                android:hint="@string/register_code"
                android:paddingLeft="10dp"
                android:textSize="@dimen/big_small"
                android:textColor="@color/colorgreen"/>
            <TextView
                android:id="@+id/set_code"
                android:layout_width="120dp"
                android:layout_height="46dp"
                android:gravity="center"
                android:text="@string/register_getCode"
                android:textSize="@dimen/big_small"
                android:textColor="@color/colorgreen"
                android:background="@drawable/txtgreencircle"/>
        </LinearLayout>
        <Button
            android:id="@+id/registerMain"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:text="@string/register_register"
            android:textSize="@dimen/big"
            android:textColor="@color/colorgreen"
            android:layout_marginTop="44dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/ripple_bg"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/colorgreen"
        android:paddingBottom="25dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_account"
            android:textColor="@color/gray"
            android:textSize="@dimen/big_small"/>
        <TextView
            android:id="@+id/backLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_login"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/big_small"/>
    </LinearLayout>
</LinearLayout>