<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorgreen"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <com.example.star.view.reder.LoadingView
        android:id="@+id/level_view"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        app:loading_renderer="LevelLoadingRenderer"
        android:visibility="gone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center">
        <com.example.star.view.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="40px"
            android:layout_gravity="center"
            android:src="@drawable/start_i2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account"
                android:textSize="@dimen/big"
                android:textColorHint="@color/colorAccent"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingTop="3dp"
                android:paddingLeft="5dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textColor="@color/colorWhite"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pwd"
                android:textSize="@dimen/big"
                android:textColorHint="@color/colorAccent"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:paddingTop="3dp"
                android:paddingLeft="5dp"
                android:paddingBottom="10dp"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorWhite"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/login"
            android:layout_width="240dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:layout_height="44dp"
            android:text="@string/login"
            android:layout_gravity="center"
            android:textSize="@dimen/big"
            android:textColor="@color/colorgreen"
            android:background="@drawable/btncircle"/>
        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register"
            android:textSize="@dimen/big_small"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="60dp"
            android:layout_height="1px"
            android:background="@color/colorWhite"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/social_login"
            android:textSize="@dimen/small"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="1px"
            android:background="@color/colorWhite"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/shangcsp"/>
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/shangctp"/>
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/shangc"/>
    </LinearLayout>

</LinearLayout>